--- a/app/src/main/assets/html/item_1.html
+++ b/app/src/main/assets/html/item_1.html
@@ -3,12 +3,139 @@
     <meta charset="utf-8">
 </head>
 <body>
-<p style="text-align: left;">
-    Используется для точек крепления на базовой верёвке и для крепления в связке среднего участника, за что получил своё второе распространённое название. Для привязывания верёвки к основным и промежуточным креплениям, для временной изоляции дефектного (перебитого) куска рабочей верёвки.
+<p style="text-align: center;">
+<h2>Галстук из бисера</h2>
 </p>
-<p style="text-align: left;">
-    Узел примечателен тем, что легко, по сравнению с восьмёркой, развязывается и одинаково хорошо затягивается в обе стороны. При рывке с одной из сторон не скользит по веревке.
+<!--<p style="text-align: left;">-->
+    <!--...-->
+<!--</p>-->
+<hr color="#653064">
+<p>
+    Время: 5-6 часов, Сложность: 7/10
 </p>
-<p style="text-align: center;"><img src="../image/amphora_knot_1.jpg" width="95%" height="44%"></p>
+<hr color="#653064">
+<p><font color="#653064">
+    <h3>ИНСТРУМЕНТЫ И МАТЕРИАЛЫ</h3>
+</font></p>
+1. ножницы;<br>
+2. нейлоновая мононить;<br>
+3. 5 мм искусственный жемчуг;<br>
+4. иглы для бисера;<br>
+5. замочек;<br>
+6. соединительные кольца.<br>
+</p>
+<p>
+<h3><font color="#653064">ПОШАГОВАЯ ИНСТРУКЦИЯ</font></h3>
+<hr color="#653064">
+<!--<p>-->
+    <!--...-->
+<!--</p>-->
+<!--<hr color="#653064">-->
+</p>
+
+<h4>ШАГ 1: СДЕЛАЙТЕ ПЕРВЫЙ РЯД</h4>
+<p>
+    Отрежьте нить длиной около метра и на ее конце завяжите одну бусинку. Конец нити не обрезайте.
+    Далее добавьте на нить еще 5 бусин и, сделав круг, проденьте нить обратно через первый шарик и следующие 3 бисерины в круге.
+    Снова добавьте 5 шариков на плетение, проденьте нить через первую бисерину и следующие 3 бисерины круга.
+    Повторите эти действия снова. Всего для изготовления одного ряда вам нужно сделать 28 колец (как показано на фото внизу слева).
+</p>
+<p style="text-align: center;">
+    <img src="../image/amphora_knot_1.jpg" width="95%" height="44%">
+</p>
+
+<h4>ШАГ 2: СПЛЕТИТЕ ГАЛСТУК</h4>
+<p>
+    Начните следующий ряд с бусины слева от центра вашего последнего круга (как показано на верхнем фото справа). Это расположит ваши ряды в шахматном порядке. Начните этот ряд, добавив 4 бусины на нить, а затем проденьте нить через прилегающий круг первого ряда во второй шарик. Затем проденьте нить в обратном направлении через первую бусинку, с которой вы начали, и затем снова через только что созданный круг, кроме последнего стежка.
+    Этот процесс может показаться вам слегка  запутанным, поэтому внимательно изучите фотографии ниже. И если вы сомневаетесь, правильно ли что-то сделали, вы всегда можете продеть иглу в обратном направлении через только что созданный круг и найти более подходящее место для начала следующего цикла.
+    После того, как вы сделали первый круг для второго ряда, добавьте только 3 бусины на нить для последующего круга, вместо 4 шариков.
+    Когда вы закончите второй ряд, начните следующий ряд таким же образом — путем добавления 4 бисерин для первого круга, и только трех шариков для всех последующих петель.
+    Когда вы закончите три ряда (включая и первый), вернитесь к первому ряду и сделайте еще два таких круга, расположив первый круг посередине между первым и вторым, и второй – между вторым и третьим.
+    Между этими двумя кольцами сплетите еще одно, последнее кольцо. Таким образом, вы создадите заостренную часть галстука (смотрите фото внизу).
+</p>
+<p style="text-align: center;">
+    <img src="../image/amphora_knot_1.jpg" width="95%" height="44%">
+</p>
+
+<h4>ШАГ 3: СДЕЛАЙТЕ УЗЕЛ</h4>
+<p>
+    Закончив с заостренной частью галстука, займитесь плетением верхнего “узла”. Для этого возьмите длинную мононить и вставьте ее в иглу.
+    Вставьте в нить 1 бусину и завяжите ее в узел.
+    Далее добавьте на нитку еще 3 бисерины и соберите их вместе в кольцо, вставив иглу через первый шарик и следующие 2 бусинки.
+    Теперь добавьте еще 3 бусины на нить, вернитесь через последнюю бисерину последней петли, которую вы только что сделали, и затем следующие 2 бусины.
+    Всего сделайте 9 таких петель.  На последнем круге пропустите нить не через две, а через все три бусины.
+    Для начала следующего ряда, добавьте 3 бисерины на нить и затем проденьте нить обратно через последнюю бисерину в предыдущем ряду от того места, где вы остановились,  и затем снова в первую бусину на петле, которую вы только что сделали.
+    Теперь добавьте только 2 бусины на нить, проденьте нитку через шарик, торчащий из второй петли предыдущего ряда и через последнюю бисерину на последнем круге. Повторите плетение до конца ряда.
+    Начните следующий ряд так же, как вы делали второй, то есть путем добавления на нить для первого круга 3 бусин, и для последующих петель добавляя по 2 бисеринки.
+    Всего сплетите 7 рядов.
+</p>
+<p style="text-align: center;">
+    <img src="../image/amphora_knot_1.jpg" width="95%" height="44%">
+</p>
+
+<h4>ШАГ 4: ПОДСОЕДИНИТЕ УЗЕЛ К ГАЛСТУКУ</h4>
+<p>
+    Чтобы предыдущее плетение стало похожим на узел (или конус), добавьте на него несколько плоских рядов с бусинами так, чтобы их вид напоминал увеличивающуюся вверх лесенку. Для этого соедините обе стороны второго ряда плетения с помощью двух бусин, нанизанных на нитку. Все петли соединяйте через бусинки «в нишах» плетения, и плотно затягивайте нити.
+    В следующем ряду добавьте на один шарик больше, то есть всего три. Затем добавляйте по 4, 5 и 6 шариков, то есть с каждым разом увеличивайте количество бисерин на 1 штуку больше. Когда вы доберетесь до вершины, завяжите нить плотным двойным или тройным узелком.
+</p>
+<p style="text-align: center;">
+    <img src="../image/amphora_knot_1.jpg" width="95%" height="44%">
+</p>
+
+<h4>ШАГ 5: ДОБАВЬТЕ НИТЬ</h4>
+<p>
+    Наберите на мононить 36-40 бусин и подсоедините их к верхним краям рядов «узла» галстука. Нить с бусинами размещайте строго симметрично.
+    К концам нити добавьте по соединительному кольцу, к которым прикрепите замочек.
+</p>
+<p style="text-align: center;">
+    <img src="../image/amphora_knot_1.jpg" width="95%" height="44%">
+</p>
+
+<p>
+    Галстук из бисера своими руками готов! Надеемся, вам понравился наш мастер-класс? А как бы вы сплели такой галстук, и в каком цвете? Обязательно напишите нам в комментариях! Желаем вам удачи.
+</p>
 </body>
 </html>
+
+<!--<html>-->
+<!--<head>-->
+    <!--<meta charset="utf-8">-->
+<!--</head>-->
+<!--<body>-->
+<!--<p style="text-align: center;">-->
+    <!--<h2>Галстук из бисера</h2>-->
+<!--</p>-->
+<!--<p style="text-align: left;">-->
+    <!--...-->
+<!--</p>-->
+<!--<hr color="#653064">-->
+<!--<p>-->
+    <!--Время: 5-6 часов, Сложность: 7/10-->
+<!--</p>-->
+<!--<hr color="#653064">-->
+<!--<p><font color="#653064">-->
+    <!--<h3>ИНСТРУМЕНТЫ И МАТЕРИАЛЫ</h3>-->
+<!--</font></p>-->
+    <!--1. ножницы;<br>-->
+    <!--2. нейлоновая мононить;<br>-->
+    <!--3. 5 мм искусственный жемчуг;<br>-->
+    <!--4. иглы для бисера;<br>-->
+    <!--5. замочек;<br>-->
+    <!--6. соединительные кольца.<br>-->
+<!--</p>-->
+<!--<p>-->
+    <!--<h3><font color="#653064">ПОШАГОВАЯ ИНСТРУКЦИЯ</font></h3>-->
+    <!--<hr color="#653064">-->
+    <!--<p>-->
+        <!--...-->
+    <!--</p>-->
+    <!--<hr color="#653064">-->
+<!--</p>-->
+
+<!--<h4 >Время: 20 минут, Сложность: 1/10</h4>-->
+<!--<p>-->
+    <!--Время: 20 минут, Сложность: 1/10-->
+<!--</p>-->
+<!--<p style="text-align: center;"><img src="../image/amphora_knot_1.jpg" width="95%" height="44%"></p>-->
+<!--</body>-->
+<!--</html>-->
